# cef-tracker

./: .gitignore  AGENTS.md  LICENSE  MAKING-OF.md  PLAN.md  README.md
package/: README.md  config.toml  pyproject.toml  requirements.txt
package/cef_tracker/: __main__.py  diff.py  http.py  main.py  models.py
package/cef_tracker/output/: base.py  csv.py  excel.py
package/cef_tracker/sources/: base.py  cefconnect.py  edgar.py
package/sample-output/: extract-202605030130.csv  extract-202605030130.xlsx  history-sample.csv
package/tests/: conftest.py  test_cefconnect.py  test_diff.py  test_edgar.py
package/tests/fixtures/: cefconnect_BIT_distributions.json  cefconnect_BIT_page.html  cefconnect_BIT_performance.json  cefconnect_BIT_pricing.json  cefconnect_BIT_search.json  edgar_BIT.json
script/: README.md  cef_snapshot.py  requirements.txt  tickers.txt
script/sample-output/: extract-202605030127.xlsx
